Replace java17 only toList() call in unit test